# syllabus

./: .gitignore  README.org  pyproject.toml  test.org
syllaboost/: DEPLOY.org  settings.py
syllabooster/: admin.py  models.py
syllabooster/management/commands/: importcourse.py  importunit.py
syllabooster/migrations/: 0011_alter_course_unique_together.py  0012_alter_coursepoint_unit.py
syllabooster/templates/syllabooster/: base.html  course_list.html  unit_list.html
