[tool.uv]
cache-dir = "./.uv-cache"
[project]
name = "syllaboost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-allauth[socialaccount]>=65.13.1",
    "django-environ>=0.12.0",
    "django-stubs>=5.2.8",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "mistune>=3.2.0",
    "orgparse>=0.4.20251020",
    "psycopg>=3.3.2",
]
